[package]
name = "yew-weather-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = "1.0.137"
tokio = { version = "1", features = ["full"] }
yew = "0.19.3"
